# JPLogistics_C152

./: .gitignore  CONTRIBUTING.md  How to fix Liveries.txt  How to install blue Lights.txt  JPLogistics_C152X.yaml  README.md  SECURITY.md  layout.json  manifest.json
.github/: CODE_OF_CONDUCT.md  card-labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  create_card.yml  created_card.yml  (+5 more)
Backup/: layout.json  manifest.json
BlueCockpitLights/: layout.json
MSFS_C152/: build.py  changelog(Latest).txt  de-DE.locPak  en-US.locPak  es-ES.locPak  fr-FR.locPak  it-IT.locPak  layout.json  manifest.json  pl-PL.locPak  pt-BR.locPak  ru-RU.locPak  version.txt
Project Files/: JPLogistics_C152.xml  MSFS_C152.xml  package-lock.json  package.json
Project Files/src/Rust/C152_Systems/msfs/: Cargo.toml  build.rs
Project Files/src/Rust/C152_Systems/msfs/src/: executor.rs  legacy.rs  lib.rs  msfs.rs  nvg.rs  sim_connect.rs  sys.rs
Project Files/src/Rust/C152_Systems/msfs/src/bindgen_support/: stdio.h  wchar.h  wrapper.h
Project Files/src/Rust/C152_Systems/msfs/src/bindgen_support/bits/: alltypes.h
Project Files/src/Rust/C152_Systems/msfs_derive/: Cargo.toml  build.rs
Project Files/src/Rust/C152_Systems/msfs_derive/src/: lib.rs
Project-Files/: JPLogistics_C152.xml
RedMetal-Livery-Example/: layout.json  manifest.json
WASMExamples/: WASMExamples.sln
jplogistics-c152/: build.py  changelog(Latest).txt  de-DE.locPak  es-ES.locPak  fr-FR.locPak  ja-JP.locPak  layout.json  manifest.json  pl-PL.locPak  sv-SE.locPak  version.txt
(+2038 files in other folders)
