[package]
name = "msfs"
version = "0.0.1-alpha.2"
authors = ["snek"]
edition = "2018"
description = "Rust bindings for the MSFS SDK"
license-file = "../LICENSE"

[dependencies]
msfs_derive = { path = "../msfs_derive", version = "0.0.1-alpha.2" }
futures = "0.3"

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.10.0"

[build-dependencies]
bindgen = "0.55"
msfs_sdk = { path = "../msfs_sdk", version = "0.0.1-alpha.2" }
cc = "1.0"
