[package]
name = "msfs_derive"
version = "0.0.1-alpha.2"
authors = ["snek"]
edition = "2018"
description = "This crate provides macros for MSFS"
license-file = "../LICENSE"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[build-dependencies]
msfs_sdk = { path = "../msfs_sdk", version = "0.0.1-alpha.2" }
